syntax = "proto3";

package grpcservice;

option java_multiple_files=true;
option java_package="com.example";

message Status {
  bool success = 1;
  int32 code = 2;
  string message = 3;
}

message UserResponse {
  Status status = 1;
  User data = 2;
}

message StreamMessageResponse {
  Status status = 1;
  int32 data = 2;
}

message MessageResponse {
  Status status = 1;
  Message data = 2;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

message Message {
  int32 id = 1;
  int32 authorId = 2;
  int32 receiverId = 3;
  string message = 4;
}

service ChatService {

  rpc SaveUser(User) returns (UserResponse) {}

  rpc SendMessage(stream Message) returns (StreamMessageResponse) {}

  rpc GetMyUsers(User) returns (stream UserResponse) {}

  rpc GetMessagesOfUsers(stream Message) returns (stream MessageResponse) {}

}